pretty much done
but nixonshead is down :(

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,8 +74,13 @@ a:hover         {
                   float: left;
                   height: 300px;
                   overflow-y: scroll;
+                  font-size: 12px;
                 }
 
 .topic-view     { width: 66%;
                   float: right;
+                }
+
+.list-group-item{
+                  overflow-x: scroll;
                 }
